@@ -23,6 +23,7 @@ command = export
 [SourceGitHub]
 
 [Bugs]
+header = SUPPORT
 
 [Authors]
 
